force-app/main/default/objects/Lease__c/Lease__c.object-meta.xml
<CustomObject>
    <description>The lease document worked by the legal team, created from a Lease Inquiry once drafting begins. Draft to Completed via its own Path.</description>
    <label>Lease</label>
    <pluralLabel>Leases</pluralLabel>
    <nameField>
        <displayFormat>LSE-{0000}</displayFormat>
        <label>Lease Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>