force-app/main/default/objects/Lease__c/fields/Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Date__c</fullName>
    <description>Date the lease was fully executed / completed.</description>
    <label>Executed Date</label>
    <type>Date</type>
</CustomField>