force-app/main/default/objects/Lease__c/fields/Lease_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Lease_Inquiry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lease Inquiry</label>
    <referenceTo>Lease_Inquiry__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>