force-app/main/default/objects/Lease__c/fields/Legal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>