force-app/main/default/objects/Lease__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <label>Property</label>
    <formula>Lease_Inquiry__r.Property_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>