force-app/main/default/objects/Lease__c/fields/Target_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Execution_Date__c</fullName>
    <description>Target date for the lease to be fully executed.</description>
    <label>Target Execution Date</label>
    <type>Date</type>
</CustomField>