force-app/main/default/objects/Lease__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <label>Tenant</label>
    <formula>Lease_Inquiry__r.Tenant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>